--- a/app/pug/all-pages.pug
+++ b/app/pug/all-pages.pug
@@ -29,17 +29,12 @@ html(lang='ru')
 	- items.push({title: 'Новость / Статья / Блог', link: 'post.html'});
 	- items.push({title: 'Календарь', link: 'calendar.html'});
 	- items.push({title: 'Объявления', link: 'ads.html'});
-	- items.push({title: 'Галереи', link: 'gallery.html'});
-	- items.push({title: 'Галереи-слайдеры', link: 'gallery.html'});
+	- items.push({title: 'Галереи и галереи-слайдеры', link: 'gallery.html'});
 	- items.push({title: 'Галереи, Видео', link: 'video.html'});
 	- items.push({title: 'Страница ошибки 404', link: '404.html'});
 	- items.push({title: 'Результаты поиска', link: 'search-result.html'});
-	- items.push({title: 'Текст', link: 'text.html'});
-	- items.push({title: 'Текст + Изображение', link: 'blocks.html'});
-	- items.push({title: 'Форма, логотипы, документы', link: 'others.html'});
-	- items.push({title: 'Таблицы', link: 'tables.html'});
-	- items.push({title: 'Спойлер, контент-слайдер', link: 'spoyler.html'});
-	- items.push({title: 'Модули блогов', link: 'blocks.html'});
+	- items.push({title: 'Текст, Текст + Изображение, логотипы, блоги, документы', link: 'blocks.html'});
+	- items.push({title: 'Форма, таблицы, спойлер, контент-слайдер', link: 'others.html'});
 	- items.push({title: 'Доска почета', link: 'honour.html'});
 	- items.push({title: 'Стайлгайд', link: 'stylegide.html'});
 	body
