--- a/app/pug/modules/_aside.pug
+++ b/app/pug/modules/_aside.pug
@@ -1,5 +1,8 @@
-#leftNavigationPseudo.menu-left-navigation-pseudo.collapse.show
+//#leftNavigationPseudo.menu-left-navigation-pseudo.collapse.show
+
 //- include ../widgets/_tabwidget-01
+
+include ../widgets/_widget-menu-left
 
 include ../widgets/_widget-slider-01
 
