--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1364,13 +1364,23 @@ h2 span,
 .breadcrumb {
   display: block;
   margin: 0;
-  padding: 15px 0 15px;
+  padding: 15px 0 0;
+  background-color: #ffffff;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+  opacity: 0;
 }
 
 .breadcrumb::after {
   display: block;
   content: "";
   clear: both;
+}
+
+.breadcrumb.show {
+  display: block;
+  opacity: 1;
 }
 
 .breadcrumb-group {
@@ -2828,21 +2838,26 @@ select.form-control:not([size]):not([multiple]) {
 
 .header.scroll {
   position: fixed;
+  width: 100%;
+  top: 0;
   z-index: 1000;
   padding-top: 15px;
   padding-bottom: 0;
   background-color: #fff;
   -webkit-transform: translateZ(0);
           transform: translateZ(0);
+  opacity: 0;
+  -webkit-transition: opacity 0.5s;
+  -o-transition: opacity 0.5s;
+  transition: opacity 0.5s;
+}
+
+.header.scroll.show {
   opacity: 1;
 }
 
 .header.scroll:before {
   opacity: 1;
-}
-
-.header.scroll + * {
-  padding-top: 95px;
 }
 
 .header.scroll .header-box {
@@ -2981,6 +2996,7 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 .header.scroll .breadcrumb {
+  display: block;
   padding-top: 3px;
 }
 
@@ -3035,8 +3051,7 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 .header {
-  position: -webkit-sticky;
-  position: sticky;
+  position: fixed;
   top: 0;
   z-index: 1000;
   width: 100%;
@@ -3066,6 +3081,10 @@ select.form-control:not([size]):not([multiple]) {
   -webkit-border-radius: 5px;
           border-radius: 5px;
   opacity: 0;
+}
+
+.header.show {
+  display: block;
 }
 
 .header-overlay {
@@ -3229,9 +3248,9 @@ select.form-control:not([size]):not([multiple]) {
   position: absolute;
   top: 0;
   left: 0;
-  padding-bottom: 0;
+  padding-bottom: 15px;
   width: 100%;
-  background-color: #fff;
+  background-color: #fff !important;
   border: none;
   -webkit-border-radius: 0;
           border-radius: 0;
@@ -3610,9 +3629,6 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 .menu-left {
-  position: absolute;
-  width: -webkit-calc(100% - 30px);
-  width: calc(100% - 30px);
   padding-bottom: 15px;
   z-index: 10;
   -webkit-border-radius: 5px;
@@ -3896,10 +3912,7 @@ select.form-control:not([size]):not([multiple]) {
 
 .content {
   height: 100%;
-}
-
-.content-group {
-  padding-top: 18px;
+  overflow: hidden;
 }
 
 .content-title::after {
@@ -9644,9 +9657,12 @@ select.form-control:not([size]):not([multiple]) {
   }
 
   .header .breadcrumb {
+    display: block;
     position: static;
     padding-bottom: 15px;
     padding-top: 0;
+    margin-top: 10px;
+    opacity: 1;
   }
 
   .header-nav-system-wrap {
@@ -10671,6 +10687,10 @@ select.form-control:not([size]):not([multiple]) {
     display: none;
   }
 
+  .header:before {
+    max-width: 530px;
+  }
+
   .header-logowrap {
     margin-right: 0;
   }
@@ -10680,6 +10700,10 @@ select.form-control:not([size]):not([multiple]) {
     margin-bottom: 0;
     max-width: 60px;
     font-size: 0px;
+  }
+
+  .header .breadcrumb {
+    padding-bottom: 10px;
   }
 
   .header-nav-system__content {
@@ -10825,7 +10849,7 @@ select.form-control:not([size]):not([multiple]) {
   }
 
   .breadcrumb-group {
-    max-width: 93%;
+    max-width: 100%;
   }
 
   .breadcrumb-back {
@@ -10898,10 +10922,6 @@ select.form-control:not([size]):not([multiple]) {
     padding-right: 15px;
   }
 
-  .header + * {
-    padding-top: 80px;
-  }
-
   .header:before {
     max-width: 100%;
     width: -webkit-calc(100% - 30px);
@@ -10940,8 +10960,10 @@ select.form-control:not([size]):not([multiple]) {
   }
 
   .header .breadcrumb {
-    margin-top: -5px;
-    padding-bottom: 10px;
+    margin-left: -15px;
+    margin-right: -15px;
+    margin-top: 10px;
+    padding-bottom: 8px;
   }
 
   .header-nav-system-wrap {
