--- a/app/sass/_content.scss
+++ b/app/sass/_content.scss
@@ -1,13 +1,14 @@
 .content {
 	// padding-top: 15px;
 	height: 100%;
+	overflow: hidden;
 	//min-height: 3500px;
 
 	&-group {
 		// display: flex;
 		// flex-wrap: wrap;
 		//padding-top: 37px;
-		padding-top: 18px;
+		//padding-top: 18px;
 		// margin-left: -15px;
 		// margin-right: -15px;
 		@include lg-block {
