--- a/app/sass/_header.scss
+++ b/app/sass/_header.scss
@@ -36,7 +36,7 @@
 
 
 .header {
-	position: sticky;
+	position: fixed;
 	top: 0;
 	z-index: 1000;
 	width: 100%;
@@ -53,9 +53,9 @@
 		position: fixed;
 		padding-left: 15px;
 		padding-right: 15px;
-		& + * {
-			padding-top: 80px;
-		}
+		//& + * {
+		//	padding-top: 80px;
+		//}
 	}
 	@include before {
 		top: 10px;
@@ -79,10 +79,9 @@
 		@include md-block {
 			max-width: 720px;
 		}
-		//@include sm-block {
-		//	max-width: 720px;
-		//
-		//}
+		@include sm-block {
+			max-width: 530px;
+		}
 		@include xs-block {
 			max-width: 100%;
 			width: calc(100% - 30px);
@@ -91,6 +90,9 @@
 	// & + .content {
 	// 	padding-top: 154px;
 	// }
+	&.show {
+		display: block;
+	}
 	&-overlay {
 		position: fixed;
 		z-index: 999;
@@ -406,19 +408,28 @@
 		position: absolute;
 		top: 0;
 		left: 0;
-		padding-bottom: 0;
+		padding-bottom: 15px;
 		width: 100%;
-		background-color: #fff;
+		background-color: #fff !important;
 		border: none;
 		border-radius: 0;
 		@include lg-block {
+			display: block;
 			position: static;
 			padding-bottom: 15px;
 			padding-top: 0;
+			margin-top: 10px;
+			opacity: 1;
+		}
+		@include sm-block {
+			padding-bottom: 10px;
 		}
 		@include xs-block {
-			margin-top: -5px;
-			padding-bottom: 10px;
+			//margin-top: -5px;
+			margin-left: -15px;
+			margin-right: -15px;
+			margin-top: 10px;
+			padding-bottom: 8px;
 		}
 		&-wrap{
 			position: relative;
