--- a/app/sass/_menu-left.scss
+++ b/app/sass/_menu-left.scss
@@ -1,6 +1,6 @@
 .menu-left {
-	position: absolute;
-	width: calc(100% - 30px);
+	//position: absolute;
+	//width: calc(100% - 30px);
 	padding-bottom: 15px;
 	z-index: 10;
 	border-radius: 5px;
