--- a/app/pug/modules/_header.pug
+++ b/app/pug/modules/_header.pug
@@ -17,7 +17,7 @@
 - links.sport = 'sport.html';
 - links.others = 'others.html';
 
-header.header.fixed
+header.header.fixed.show
 	.container
 		.header-box
 			.header-box__item.header-box__logo
