--- a/app/sass/_header-scroll.scss
+++ b/app/sass/_header-scroll.scss
@@ -4,10 +4,10 @@
 	top: 0;
 	z-index: 1000;
 	padding-top: 15px;
-	padding-bottom: 0;
+	padding-bottom: 12px;
 	background-color: #fff;
 	transform: translateZ(0);
-	opacity: 0;
+	opacity: 1;
 	transition: opacity 0.5s;
 	&.show {
 		opacity: 1;
