--- a/app/sass/_menu-left.scss
+++ b/app/sass/_menu-left.scss
@@ -12,18 +12,18 @@
 		background-color: #f4f5f5;
 
 	}
-	&-navigation {
-		padding-top: 15px;
-		@include xs-block {
-			margin-left: -15px;
-			margin-right: -15px;
-		}
-		&-pseudo {
-			@include lg-block {
-				display: none !important;
-			}
-		}
-	}
+	//&-navigation {
+	//	padding-top: 15px;
+	//	@include xs-block {
+	//		margin-left: -15px;
+	//		margin-right: -15px;
+	//	}
+	//	&-pseudo {
+	//		@include lg-block {
+	//			display: none !important;
+	//		}
+	//	}
+	//}
 	&-title {
 		
 		color: $light-color;
